    - filter_dependencies: Remove @special use.
    - run_script: Remove.
    - parse_one_srcdep: Remove @special use.
    - get_special: Remove.
    - write_srcdep_lock_file: Remove @special use.
    - check_srcdep_conflicts: Remove @special use.
    - dump_main_state: New function to dump the program state using
      Data::Dumper.  Use to dump the state after each build.
  * Sbuild/Chroot.pm:
    - Remove all special casing for sudo and schroot.  schroot is now the
      only supported method of accessing chroots.
    - end_session: Only attempt to end a session when $schroot_session is
      non-empty.
    - _setup_options: Remove use of $chroot_only.
    - init: Add newline to debugging message.
  * Sbuild/Conf.pm:
    - Don't export $source_dependencies.
    - Don't define $source_dependencies.
    - Abort with an error if $source_dependencies is defined.
    - Don't export $sudo or $chroot_mode.
    - Don't define $sudo or $chroot_mode.
    - Remove sudo sanity checks.
    - Abort with an error if $sudo or $chroot_mode are defined.
    - Don't export $chroot_only.
    - Don't define $chroot_only.
    - Abort with an error if $chroot_only is defined.
  * sbuild.conf:
    - Remove $source_dependencies.
    - Remove $sudo.
    - Remove $chroot_only.
  * sbuild.conf.local: Remove $source_dependencies.
  * sbuild-setup.7.in:
    - Remove sudo setup.
    - Update user section to document sbuild group membership and
      add_sbuild_user.  Remove chroot setup, which is now handled by
      schroot.
  * bin/README.bins: Remove sudo from extra package list.
  * bin/updatechroot, bin/upgradechroot, bin/chrapt: Remove chroot_mode.
  * chroot/add_sbuild_user:
    - Remove sudo setup instructions and copying of /etc/sudoers to the
      chroot.
    - Rewrite in perl.  Only call adduser; all other chroot setup is
      taken care of by the 50sbuild schroot chroot setup script.
  * TODO: New file.  Document needed changes.
